...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2ND-dd-FfO">
                                <frame key="frameInset" minX="150" minY="328" width="74" height="46"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                <state key="normal" title="LOGIN">
                                    <color key="titleColor" red="0.96578133911963793" green="0.95698042276445483" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="bt_login:" destination="GSt-II-P7G" eventType="touchUpInside" id="VbJ-U1-JlX"/>
                                </connections>
                            </button>
...
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <navigationItem key="navigationItem" title="Day la navigationBar" id="rcz-8E-iHs">
                        <barButtonItem key="backBarButtonItem" title="chuyen ve view truoc" id="hyL-HZ-lZg"/>
                    </navigationItem>
                    <connections>
                        <outlet property="lb_thongbao" destination="ZWG-SO-Rcm" id="6Rx-x8-9zE"/>
                        <outlet property="tf_taikhoan" destination="ccz-7X-Knw" id="cyf-JE-fmQ"/>
                        <outlet property="tf_text" destination="S1o-jX-7eX" id="EKZ-Fy-5Pe"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qF1-Pv-mK6">
                                <frame key="frameInset" minX="152" minY="474" width="83" height="68"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.47421333804197485" green="1" blue="0.97870957229332489" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="102"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                <connections>
                                    <action selector="btnac1:" destination="X1T-Wc-0Rd" eventType="touchUpInside" id="LSo-hM-KYl"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V91-UG-ifx">
                                <frame key="frameInset" minX="274" minY="474" width="76" height="68"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.47421333804197485" green="1" blue="0.97870957229332489" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="103"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                <connections>
                                    <action selector="btnac2:" destination="X1T-Wc-0Rd" eventType="touchUpInside" id="8pd-oS-QAt"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Right" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BU1-Vb-QV0">
...
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fRl-4X-4YN">
                                <frame key="frameInset" minX="16" minY="474" width="78" height="68"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.47421333804197485" green="1" blue="0.97870957229332489" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="101"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                <connections>
                                    <action selector="btnac:" destination="X1T-Wc-0Rd" eventType="touchUpInside" id="60e-07-Y7k"/>
                                </connections>
                            </button>
                        </subviews>
...
                                <color key="textColor" red="0.0" green="0.25098040700000002" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pDZ-QE-fVC">
                                <frame key="frameInset" minX="140" minY="522" width="88" height="38"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Login"/>
                                <connections>
                                    <action selector="act_Push:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EQV-jV-amW"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
